--- a/index.html
+++ b/index.html
@@ -168,6 +168,24 @@
                
                 <tr>
                   <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                Feb 2023
+              </span></th>
+                  <td>
+                    I will attend <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> at Washington, DC. Happy to talk to you in person!
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                Jan 2023
+              </span></th>
+                  <td>
+                    Paper “<a href="https://arxiv.org/abs/2208.12853" rel="external nofollow noopener" target="_blank">Domain Adaptation with Adversarial Training on Penultimate Activations</a>” is selected for oral presentation.
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
                 Dec 2022
               </span></th>
                   <td>
@@ -220,15 +238,6 @@
  
                   </td>
                 </tr> 
-                <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
-                Jan 2021
-              </span></th>
-                  <td>
-                    Paper “<a href="https://arxiv.org/abs/2008.00965" rel="external nofollow noopener" target="_blank">End-to-end Full Projector Compensation</a>” has been published in IEEE Transactions on Pattern Analysis and Machine Intelligence (PAMI)!
- 
-                  </td>
-                </tr> 
               </table>
             </div> 
           </div>
@@ -244,8 +253,8 @@
     <!-- Footer -->    
     <footer class="fixed-bottom">
       <div class="container mt-0">
-        © Copyright 2022 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: December 24, 2022.
+        © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
+Last updated: January 14, 2023.
       </div>
     </footer>
 
