--- a/index.html
+++ b/index.html
@@ -171,16 +171,7 @@
                 Feb 2023
               </span></th>
                   <td>
-                    I will attend <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> at Washington, DC. Happy to talk to you in person!
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
-                Jan 2023
-              </span></th>
-                  <td>
-                    Paper “<a href="https://arxiv.org/abs/2208.12853" rel="external nofollow noopener" target="_blank">Domain Adaptation with Adversarial Training on Penultimate Activations</a>” is selected for oral presentation.
+                    Attended <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> at Washington, DC.
  
                   </td>
                 </tr> 
@@ -207,7 +198,7 @@
                 Oct 2022
               </span></th>
                   <td>
-                    Attended ECCV 2022 <del>at Tel Aviv, Israel</del> remotely.
+                    Attended <a href="https://eccv2022.ecva.net/" rel="external nofollow noopener" target="_blank">ECCV 2022</a> <del>at Tel Aviv, Israel</del> remotely.
  
                   </td>
                 </tr> 
@@ -225,7 +216,7 @@
                 Jun 2022
               </span></th>
                   <td>
-                    Attended CVPR 2022 at New Orleans, LA.
+                    Attended <a href="https://cvpr2022.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2022</a> at New Orleans, LA.
  
                   </td>
                 </tr> 
@@ -254,7 +245,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: January 14, 2023.
+Last updated: February 12, 2023.
       </div>
     </footer>
 
