--- a/index.html
+++ b/index.html
@@ -171,6 +171,15 @@
                 Feb 2023
               </span></th>
                   <td>
+                    Paper “<a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">Backdoor Cleansing with Unlabeled Data</a>” is accepted by <a href="https://cvpr2023.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2023</a>! Congratulations to my collaborators!
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                Feb 2023
+              </span></th>
+                  <td>
                     Attended <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> at Washington, DC.
  
                   </td>
@@ -195,28 +204,10 @@
                 </tr> 
                 <tr>
                   <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
-                Oct 2022
-              </span></th>
-                  <td>
-                    Attended <a href="https://eccv2022.ecva.net/" rel="external nofollow noopener" target="_blank">ECCV 2022</a> <del>at Tel Aviv, Israel</del> remotely.
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
                 Jul 2022
               </span></th>
                   <td>
                     Paper “<a href="https://arxiv.org/abs/2207.08877" rel="external nofollow noopener" target="_blank">Prior Knowledge Guided Unsupervised Domain Adaptation</a>” is accepted by <a href="https://eccv2022.ecva.net/" rel="external nofollow noopener" target="_blank">ECCV 2022</a>!
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
-                Jun 2022
-              </span></th>
-                  <td>
-                    Attended <a href="https://cvpr2022.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2022</a> at New Orleans, LA.
  
                   </td>
                 </tr> 
@@ -245,7 +236,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: February 12, 2023.
+Last updated: February 27, 2023.
       </div>
     </footer>
 
