--- a/publications/index.html
+++ b/publications/index.html
@@ -253,7 +253,7 @@
           <div class="author">
           
 
-          <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, and Haibin Zhang</div>
+          <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, and Haibin Ling</div>
 
           <!-- Journal/Book title and date -->
           
@@ -407,7 +407,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: February 27, 2023.
+Last updated: March 01, 2023.
       </div>
     </footer>
 
