--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     
 
     <!-- Fallback to the original file -->
-    <img src="/assets/img/images/bio.jpg" class="img-fluid z-depth-1 rounded-circle" width="auto" height="auto" alt="images/bio.jpg" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
+    <img src="/assets/img/images/bio.jpg" class="img-fluid z-depth-1 rounded" width="auto" height="auto" alt="images/bio.jpg" onerror="this.onerror=null; $('.responsive-img-srcset').remove();">
 
   </picture>
 
@@ -132,11 +132,12 @@
           <div class="clearfix">
             <!-- <i style="color: var(--global-theme-color)">A practioner of Machine Learning, Computer Vision</i> -->
 
-<p>Hi! I am a PhD candidate in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Hi! I am a PhD candidate in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
 
-<p>I am broadly interested in machine learning and computer vision, particularly domain adaptation, transfer learning, weakly-supervised learning. I also work on adversarial attack and defense of neural networks. My past research includes ensemble learning, recommender system, and medical image processing.</p>
+<p>I am broadly interested in machine learning and computer vision, particularly domain adaptation, transfer learning, weakly-supervised learning. I also work on adversarial attack and defense of neural networks.</p>
 
-<p>I earned my MSc from Nanjing University in 2018 and BEng from Huazhong University of Science and Technology in 2015.</p>
+<p>I earned my MSc from Nanjing University and BEng from Huazhong University of Science and Technology.</p>
+
 
           <!-- Social -->
           <div class="social">
@@ -164,16 +165,18 @@
               <table class="table table-sm table-borderless">
                
                 <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Feb 2023
               </span></th>
                   <td>
                     Paper “<a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">Backdoor Cleansing with Unlabeled Data</a>” is accepted by <a href="https://cvpr2023.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2023</a>! Congratulations to my collaborators!
+
+A preliminary version will appear in <a href="https://iclr23-bands.github.io/" rel="external nofollow noopener" target="_blank">ICLR workshop on Backdoor Attacks and Defenses in Machine Learning (BANDS)</a> as Oral Talk.
  
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Feb 2023
               </span></th>
                   <td>
@@ -182,7 +185,7 @@
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Dec 2022
               </span></th>
                   <td>
@@ -191,7 +194,7 @@
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Nov 2022
               </span></th>
                   <td>
@@ -200,7 +203,7 @@
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Jul 2022
               </span></th>
                   <td>
@@ -209,7 +212,7 @@
                   </td>
                 </tr> 
                 <tr>
-                  <th scope="row" width="16%"><span class="badge font-weight-bold text-uppercase" style="min-height: 5px; min-width: 75px; background-color: var(--global-theme-color)">
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Mar 2022
               </span></th>
                   <td>
@@ -233,7 +236,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: March 11, 2023.
+Last updated: March 20, 2023.
       </div>
     </footer>
 
