--- a/publications/index.html
+++ b/publications/index.html
@@ -127,7 +127,7 @@
           <div class="author">
           
 
-          </div>
+          <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Lu Pang, Chao Chen, and Haibin Ling</div>
 
           <!-- Journal/Book title and date -->
           
