--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
             <br>
             <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Lu Pang, Chao Chen, and Haibin Ling
             <br>
-            <!-- arXiv preprint arXiv:2303.15564. [<a href="https://arxiv.org/pdf/2302.13252.pdf">ArXiv</a>] [<a href="https://github.com/tsun/BDMAE">Code</a>] -->
-            arXiv 2023. [<a href="https://arxiv.org/pdf/2302.13252.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/BDMAE" rel="external nofollow noopener" target="_blank">Code</a>]
+
+            arXiv 2023. [<a href="https://arxiv.org/abs/2303.15564" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/BDMAE" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
 
@@ -219,8 +219,7 @@
             <br>
             <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, and Haibin Ling
             <br>
-            <!-- arXiv preprint arXiv:2208.12856. [<a href="https://arxiv.org/pdf/2208.12856.pdf">ArXiv</a>] [<a href="https://github.com/tsun/LADA">Code</a>] -->
-            arXiv 2022. [<a href="https://arxiv.org/pdf/2208.12856.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/LADA" rel="external nofollow noopener" target="_blank">Code</a>]
+            arXiv 2022. [<a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/LADA" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
             <ul><li>
@@ -229,7 +228,7 @@
             Lu Pang, <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Haibin Ling, and Chao Chen
             <br>
             <!-- IEEE/CVF Conference on Computer Vision and Pattern Recognition 2023. [<a href="https://arxiv.org/pdf/2211.12044.pdf">ArXiv</a>] [<a href="https://github.com/luluppang/BCU">Code</a>] -->
-            CVPR 2023. [<a href="https://arxiv.org/pdf/2211.12044.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/luluppang/BCU" rel="external nofollow noopener" target="_blank">Code</a>]
+            CVPR 2023. [<a href="https://openaccess.thecvf.com/content/CVPR2023/html/Pang_Backdoor_Cleansing_With_Unlabeled_Data_CVPR_2023_paper.html" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/luluppang/BCU" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
 
@@ -239,7 +238,7 @@
             <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, and Haibin Ling
             <br>
             <!-- AAAI Conference on Artificial Intelligence 2023. <font color="red">[Oral presentation]</font> [<a href="https://arxiv.org/pdf/2208.12853.pdf">ArXiv</a>] [<a href="https://github.com/tsun/APA">Code</a>] -->
-            AAAI 2023. <font color="red">{Oral presentation}</font> [<a href="https://arxiv.org/pdf/2208.12853.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/APA" rel="external nofollow noopener" target="_blank">Code</a>]
+            AAAI 2023. <font color="red">{Oral presentation}</font> [<a href="https://ojs.aaai.org/index.php/AAAI/article/view/26185" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/abs/2208.12853" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/APA" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
             <ul><li>
@@ -248,7 +247,7 @@
             <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, and Haibin Ling
             <br>
             <!-- European Conference on Computer Vision 2022. [<a href="https://arxiv.org/pdf/2207.08877.pdf">ArXiv</a>] [<a href="https://github.com/tsun/KUDA">Code</a>] -->
-            ECCV 2022. [<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/html/2872_ECCV_2022_paper.php" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/pdf/2207.08877.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/KUDA" rel="external nofollow noopener" target="_blank">Code</a>]
+            ECCV 2022. [<a href="https://www.ecva.net/papers/eccv_2022/papers_ECCV/html/2872_ECCV_2022_paper.php" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/abs/2207.08877" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/KUDA" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
             <ul><li>
@@ -257,7 +256,7 @@
             <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, Tianshuo Zhang, and Haibin Lin
             <br>
             <!-- IEEE/CVF Conference on Computer Vision and Pattern Recognition 2022. [<a href="https://arxiv.org/pdf/2204.07683.pdf">ArXiv</a>] [<a href="https://github.com/tsun/SSRT">Code</a>] -->
-            CVPR 2022. [<a href="https://openaccess.thecvf.com/content/CVPR2022/html/Sun_Safe_Self-Refinement_for_Transformer-Based_Domain_Adaptation_CVPR_2022_paper.html" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/pdf/2204.07683.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/SSRT" rel="external nofollow noopener" target="_blank">Code</a>]
+            CVPR 2022. [<a href="https://openaccess.thecvf.com/content/CVPR2022/html/Sun_Safe_Self-Refinement_for_Transformer-Based_Domain_Adaptation_CVPR_2022_paper.html" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/abs/2204.07683" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/SSRT" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
             <ul><li>
@@ -266,7 +265,7 @@
              Bingyao Huang, <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, and Haibin Ling
             <br>
             <!-- IEEE Transactions on Pattern Analysis and Machine Intelligence 2021. [<a href="https://arxiv.org/pdf/2008.00965.pdf">ArXiv</a>] [<a href="https://github.com/BingyaoHuang/CompenNeSt-plusplus">Code</a>] -->
-            TPAMI 2021. [<a href="https://ieeexplore.ieee.org/document/9318552" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/pdf/2008.00965.pdf" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/BingyaoHuang/CompenNeSt-plusplus" rel="external nofollow noopener" target="_blank">Code</a>]
+            TPAMI 2021. [<a href="https://ieeexplore.ieee.org/document/9318552" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/abs/2008.00965" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/BingyaoHuang/CompenNeSt-plusplus" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
           </div>
@@ -294,7 +293,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: June 14, 2023.
+Last updated: July 02, 2023.
       </div>
     </footer>
 
