--- a/index.html
+++ b/index.html
@@ -162,6 +162,15 @@
                
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
+                Jul 2023
+              </span></th>
+                  <td>
+                    <a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://iccv2023.thecvf.com/" rel="external nofollow noopener" target="_blank">ICCV 2023</a>!
+ 
+                  </td>
+                </tr> 
+                <tr>
+                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
                 Jun 2023
               </span></th>
                   <td>
@@ -180,7 +189,7 @@
                 </tr> 
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Feb 2023
+                Mar 2023
               </span></th>
                   <td>
                     <a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://cvpr2023.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2023</a>! A preliminary version appears in <a href="https://iclr23-bands.github.io/" rel="external nofollow noopener" target="_blank">BANDS</a> workshop as Oral Talk.
@@ -219,7 +228,7 @@
             <br>
             <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, and Haibin Ling
             <br>
-            arXiv 2022. [<a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/LADA" rel="external nofollow noopener" target="_blank">Code</a>]
+            ICCV 2023. [<a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/LADA" rel="external nofollow noopener" target="_blank">Code</a>]
             </li></ul>
 
             <ul><li>
@@ -293,7 +302,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: July 02, 2023.
+Last updated: July 17, 2023.
       </div>
     </footer>
 
