--- a/publications/index.html
+++ b/publications/index.html
@@ -109,8 +109,7 @@
 <p>Full publications can be found in <b><a href="https://scholar.google.com/citations?user=izyo6gkAAAAJ" rel="external nofollow noopener" target="_blank">Google Scholar</a></b>.</p>
 <div class="publications">
   <h2 class="year">xx</h2>
-  <ol class="bibliography">
-<li>
+  <ol class="bibliography"><li>
 <!-- _layouts/bib.html -->
       <div class="row">
         <div class="col-sm-2 abbr"><div>arXiv</div></div>
@@ -145,7 +144,10 @@
           </div>
         </div>
       </div>
-</li>
+</li></ol>
+
+  <h2 class="year">2023</h2>
+  <ol class="bibliography">
 <li>
 <!-- _layouts/bib.html -->
       <div class="row">
@@ -165,7 +167,7 @@
           <!-- Journal/Book title and date -->
           
           <div class="periodical">
-            <em>arXiv preprint arXiv:2208.12856</em>  xx
+            <em>Proceedings of the IEEE/CVF International Conference on Computer Vision</em>  2023
           </div>
         
           <!-- Links/Buttons -->
@@ -182,10 +184,6 @@
         </div>
       </div>
 </li>
-</ol>
-
-  <h2 class="year">2023</h2>
-  <ol class="bibliography">
 <li>
 <!-- _layouts/bib.html -->
       <div class="row">
@@ -390,7 +388,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: July 02, 2023.
+Last updated: July 17, 2023.
       </div>
     </footer>
 
