--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
           <!-- Selected papers -->
           <div class="news">
-            <h2>publications and preprints</h2>
+            <h2>selected publications</h2>
 
             <ul><li>
             <b>Mask and Restore: Blind Backdoor Defense at Test Time with Masked Autoencoder</b>
