--- a/publications/index.html
+++ b/publications/index.html
@@ -151,7 +151,7 @@
 <li>
 <!-- _layouts/bib.html -->
       <div class="row">
-        <div class="col-sm-2 abbr"><div>arXiv</div></div>
+        <div class="col-sm-2 abbr"><div>ICCV</div></div>
 
         <!-- Entry bib key -->
         <div id="sun2022local" class="col-sm-8">
@@ -167,7 +167,7 @@
           <!-- Journal/Book title and date -->
           
           <div class="periodical">
-            <em>Proceedings of the IEEE/CVF International Conference on Computer Vision</em>  2023
+            <em>IEEE/CVF International Conference on Computer Vision</em>  2023
           </div>
         
           <!-- Links/Buttons -->
