--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
           <div class="clearfix">
             <!-- <i style="color: var(--global-theme-color)">A practioner of Machine Learning, Computer Vision</i> -->
 
-<p>Hi! I am a PhD candidate in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
+<p>Hi! I am a final-year PhD student in Computer Science at <a href="https://www.cs.stonybrook.edu/" target="_blank" rel="nofollow">Stony Brook University</a>, fortunately advised by <a href="https://www3.cs.stonybrook.edu/~hling/" target="_blank" rel="nofollow">Prof. Haibin Ling</a>.</p>
 
-<p>I am broadly interested in machine learning and computer vision, particularly domain adaptation, transfer learning, weakly-supervised learning. I also work on adversarial attack and defense of neural networks.</p>
+<p>I am broadly interested in machine learning and computer vision, particularly domain adaptation, weakly-supervised learning, transfer learning from vision-language model. I also work on adversarial attack and defense of neural networks.</p>
 
 <p>I earned my MSc from Nanjing University and BEng from Huazhong University of Science and Technology.</p>
 
