--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 Jun 2023
               </span></th>
                   <td>
-                    Start my internship at Adobe Inc.
+                    Started my internship at Adobe Inc.
  
                   </td>
                 </tr> 
