--- a/index.html
+++ b/index.html
@@ -162,19 +162,19 @@
                
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Jul 2023
+                Aug 2023
               </span></th>
                   <td>
-                    <a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://iccv2023.thecvf.com/" rel="external nofollow noopener" target="_blank">ICCV 2023</a>!
+                    <a href="https://pubs.rsc.org/en/content/articlehtml/2023/dd/d3dd00114h" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://pubs.rsc.org/en/journals/journalissues/dd" rel="external nofollow noopener" target="_blank">Digital Discovery</a>!
  
                   </td>
                 </tr> 
                 <tr>
                   <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Jun 2023
+                Jul 2023
               </span></th>
                   <td>
-                    Started my internship at Adobe Inc.
+                    <a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://iccv2023.thecvf.com/" rel="external nofollow noopener" target="_blank">ICCV 2023</a>!
  
                   </td>
                 </tr> 
@@ -302,7 +302,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: July 17, 2023.
+Last updated: August 21, 2023.
       </div>
     </footer>
 
