--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
             <ul><li>
             <b>Safe Self-Refinement for Transformer-Based Domain Adaptation</b>
             <br>
-            <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, Tianshuo Zhang, and Haibin Lin
+            <b style="color: var(--global-theme-color)"><u>Tao Sun</u></b>, Cheng Lu, Tianshuo Zhang, and Haibin Ling
             <br>
             <!-- IEEE/CVF Conference on Computer Vision and Pattern Recognition 2022. [<a href="https://arxiv.org/pdf/2204.07683.pdf">ArXiv</a>] [<a href="https://github.com/tsun/SSRT">Code</a>] -->
             CVPR 2022. [<a href="https://openaccess.thecvf.com/content/CVPR2022/html/Sun_Safe_Self-Refinement_for_Transformer-Based_Domain_Adaptation_CVPR_2022_paper.html" rel="external nofollow noopener" target="_blank">HTML</a>] [<a href="https://arxiv.org/abs/2204.07683" rel="external nofollow noopener" target="_blank">ArXiv</a>] [<a href="https://github.com/tsun/SSRT" rel="external nofollow noopener" target="_blank">Code</a>]
@@ -302,7 +302,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: August 21, 2023.
+Last updated: August 24, 2023.
       </div>
     </footer>
 
