--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
 <p>I earned my MS from Nanjing University <a href="http://www.lamda.nju.edu.cn/MainPage.ashx" rel="external nofollow noopener" target="_blank">LAMDA group</a> and BS from Huazhong University of Science and Technology.</p>
 
-<p><b style="color:red">I am open to Research Scientist/Engineer, Applied Scientist opportunities! Please feel free to contact me if you think I could be a good fit. Thank you :)</b></p>
+<p><b style="color:red">I am open to Research Scientist/Engineer, Applied Scientist opportunities!</b></p>
 
 <p>Contact: tao # cs.stonybrook.edu</p>
 
@@ -362,7 +362,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: October 05, 2023.
+Last updated: October 18, 2023.
       </div>
     </footer>
 
