--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
     <div class="news">
       <h2>service</h2>
-      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, WACV, TPAMI, TNNLS
+      Reviewer: ICLR, NeurIPS, ICML, ICCV, CVPR, WACV, TPAMI, IJCV, TNNLS
     </div>
 
 
