--- a/index.html
+++ b/index.html
@@ -138,8 +138,6 @@
 
 <p>I earned my MS from Nanjing University <a href="http://www.lamda.nju.edu.cn/MainPage.ashx" rel="external nofollow noopener" target="_blank">LAMDA group</a> and BS from Huazhong University of Science and Technology.</p>
 
-<p><b style="color:red">I am open to Research Scientist/Engineer, Applied Scientist opportunities!</b></p>
-
 <p>Contact: tao # cs.stonybrook.edu</p>
 
 
@@ -172,15 +170,6 @@
                 Aug 2023
               </span></th>
                   <td>
-                    Invited to review for <a href="https://iclr.cc/" rel="external nofollow noopener" target="_blank">ICLR 2024</a>!
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Aug 2023
-              </span></th>
-                  <td>
                     <a href="https://pubs.rsc.org/en/content/articlehtml/2023/dd/d3dd00114h" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://pubs.rsc.org/en/journals/journalissues/dd" rel="external nofollow noopener" target="_blank">Digital Discovery</a>!
 
  
@@ -191,16 +180,7 @@
                 Jul 2023
               </span></th>
                   <td>
-                    <a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://iccv2023.thecvf.com/" rel="external nofollow noopener" target="_blank">ICCV 2023</a>!
- 
-                  </td>
-                </tr> 
-                <tr>
-                  <th scope="row" width="10%"><span style="min-height: 5px; min-width: 20px">
-                Apr 2023
-              </span></th>
-                  <td>
-                    Invited to review for <a href="https://nips.cc/Conferences/2023" rel="external nofollow noopener" target="_blank">NeurIPS 2023</a>!
+                    <a href="http://arxiv.org/abs/2208.12856" rel="external nofollow noopener" target="_blank">One paper</a> on Active Domain Adaptation accepted by <a href="https://iccv2023.thecvf.com/" rel="external nofollow noopener" target="_blank">ICCV 2023</a>!
  
                   </td>
                 </tr> 
@@ -209,7 +189,7 @@
                 Mar 2023
               </span></th>
                   <td>
-                    <a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">One paper</a> accepted by <a href="https://cvpr2023.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2023</a>! A preliminary version appears in <a href="https://iclr23-bands.github.io/" rel="external nofollow noopener" target="_blank">BANDS</a> workshop as Oral Talk.
+                    <a href="https://arxiv.org/abs/2211.12044" rel="external nofollow noopener" target="_blank">One paper</a> on Backdoor Cleansing accepted by <a href="https://cvpr2023.thecvf.com/" rel="external nofollow noopener" target="_blank">CVPR 2023</a>! A preliminary version appears in <a href="https://iclr23-bands.github.io/" rel="external nofollow noopener" target="_blank">BANDS</a> workshop as Oral Talk.
  
                   </td>
                 </tr> 
@@ -218,7 +198,7 @@
                 Feb 2023
               </span></th>
                   <td>
-                    Attended <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> at Washington, DC.
+                    Attended <a href="https://aaai.org/Conferences/AAAI-23/" rel="external nofollow noopener" target="_blank">AAAI 2023</a> and presented <a href="https://ojs.aaai.org/index.php/AAAI/article/view/26185" rel="external nofollow noopener" target="_blank">one paper</a> on Domain Adaptation at Washington, DC.
  
                   </td>
                 </tr> 
@@ -362,7 +342,7 @@
     <footer class="fixed-bottom">
       <div class="container mt-0">
         © Copyright 2023 Tao  Sun. Powered by <a href="https://jekyllrb.com/" target="_blank" rel="external nofollow noopener">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio" rel="external nofollow noopener" target="_blank">al-folio</a> theme.
-Last updated: October 18, 2023.
+Last updated: December 06, 2023.
       </div>
     </footer>
 
